--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gsap": "^3.8.0",
     "parcel": "^2.0.0",
     "postcss": "^8.3.9"
   },
