--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "gsap": "^3.8.0",
+    "locomotive-scroll": "^4.1.3",
     "parcel": "^2.0.0",
     "postcss": "^8.3.9"
   },
