--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aos": "^2.3.4",
     "gsap": "^3.8.0",
+    "jquery": "^3.6.0",
     "locomotive-scroll": "^4.1.3",
     "parcel": "^2.0.0",
-    "postcss": "^8.3.9"
+    "postcss": "^8.3.9",
+    "three": "^0.135.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0",
