--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.4.0",
     "parcel": "^2.0.0",
     "postcss-cli": "^8.3.1",
     "sass": "^1.38.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.8"
+    "tailwindcss": "^3.0.2"
   }
 }
