--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "gsap": "^3.8.0",
     "jquery": "^3.6.0",
     "locomotive-scroll": "^4.1.3",
-    "parcel": "^2.0.0",
+    "parcel": "^2.0.1",
     "postcss": "^8.3.9",
     "three": "^0.135.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0",
+    "@parcel/packager-raw-url": "^2.0.1",
+    "@parcel/transformer-sass": "^2.0.1",
+    "@parcel/transformer-webmanifest": "^2.0.1",
     "autoprefixer": "^10.4.0",
-    "parcel": "^2.0.0",
+    "parcel": "^2.0.1",
     "postcss-cli": "^8.3.1",
     "sass": "^1.38.2",
     "tailwindcss": "^2.2.19"
